@@ -3,6 +3,8 @@
 		- TODO: prevent duplicate registrations of the same name
 	- user verification now works!
 		- posts will include a "Verified" marker next to the date/IP/password hash of a post if verification was successsful
+	- added a "reply to thread" link at the bottom of a thread to automatically populate the "thread id" field on the reply form
+		- TODO: disable this box and go solely with this method?
 
 # December 26, 2012
 	- board name, admin panel button, and version info (if enabled) are now located in a static bar at the top of the screen
